[gd_scene load_steps=12 format=3 uid="uid://bjvwtvpb5yrgl"]

[ext_resource type="Texture2D" uid="uid://c0tuqe6fcpm4f" path="res://assets/ui/lucid/Play.png" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://cto12x8qlqpjs" path="res://assets/ui/lucid/Gear.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://5shptknrxavo" path="res://scripts/gui/main_menu.gd" id="1_wu84c"]
[ext_resource type="Script" uid="uid://bdoig1y0xb5wj" path="res://scripts/components/audio_button.gd" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://by4t0ry8uj51f" path="res://assets/Ornate Retro UI/grabber0.png" id="5_lel3l"]
[ext_resource type="AudioStream" uid="uid://dyaycgid55pon" path="res://assets/audio/music/shake-it-up.mp3" id="5_x41oi"]
[ext_resource type="Texture2D" uid="uid://si57jvhxxwwb" path="res://assets/ui/contador.png" id="6_v87vn"]
[ext_resource type="Texture2D" uid="uid://dghaopy7k5l2i" path="res://assets/ui/BlackAnt.png" id="7_buj57"]

[sub_resource type="Gradient" id="Gradient_f4mfi"]
offsets = PackedFloat32Array(0, 0.9831933)
colors = PackedColorArray(0.09411765, 0.5647059, 0.8980392, 1, 0.37254903, 0.8039216, 0.89411765, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vue75"]
gradient = SubResource("Gradient_f4mfi")
fill_from = Vector2(0, 0.24358974)
fill_to = Vector2(0, 1)

[sub_resource type="Theme" id="Theme_ekxnf"]
Button/font_sizes/font_size = 50

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu84c")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_vue75")

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Cordynvasion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -314.0
offset_top = 150.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ekxnf")
text = "ui_start"
icon = ExtResource("1_ekxnf")
alignment = 2
expand_icon = true
script = ExtResource("2_bqqt6")
metadata/_custom_type_script = "uid://bdoig1y0xb5wj"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "ui_settings"
icon = ExtResource("1_l6cm7")
alignment = 2
expand_icon = true
script = ExtResource("2_bqqt6")
metadata/_custom_type_script = "uid://bdoig1y0xb5wj"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "ui_credits"
icon = ExtResource("5_lel3l")
alignment = 2
expand_icon = true
script = ExtResource("2_bqqt6")
metadata/_custom_type_script = "uid://bdoig1y0xb5wj"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x41oi")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(92, 295)
scale = Vector2(7.6374993, 7.6374993)
texture = ExtResource("6_v87vn")
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(322, 429)
scale = Vector2(7.6374993, 7.6374993)
texture = ExtResource("7_buj57")
flip_h = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
